--- a/inst/templates/dashboard_groups/dashboard.qmd
+++ b/inst/templates/dashboard_groups/dashboard.qmd
@@ -17,6 +17,7 @@ format:
 
 # Add folder name if dashboard is not in the root of the project. Add trailing /
 base_path <- ""
+
 ```
 
 
@@ -170,7 +171,7 @@ contributions_type <- contributions_summary |>
 
 # Overview
 
-## Title and description
+## Title and description 
 
 ::: {.card .flow}
 
@@ -202,7 +203,7 @@ round(mean(contributions_summary$account_age), digits = 2)
 
 Hours spent contributing (estimate based on time x changesets x features + time * written words + time * delete words + time for discussion + time for ...)
 
-## Some summaries
+## Some summaries {height=85%}
 
 ### User Stats {.tabset}
 
@@ -231,10 +232,9 @@ hist_account_age <- contributions_summary |>
     fontface = "bold"
   ) + 
   scale_x_continuous(breaks = seq(0, 20, by = 5)) +
-  labs(y = "Number of Accounts", x = "Age of Accounts (in years)") +
+  labs(y = "# users", x = "Account's age (in years)") +
   theme_user_stats
 
-ggplotly(hist_account_age)
 
 ```
 
@@ -264,10 +264,38 @@ hist_map_changesets <- contributions_summary |>
     fontface = "bold"
   ) + 
   # scale_x_continuous(breaks = seq(0, 20, by = 5)) +
-  labs(y = "Number of users", x = "Changesets authored by user") +
+  labs(y = "# of users", x = "Changesets") +
   theme_user_stats
 
-ggplotly(hist_map_changesets)
+```
+
+```{r}
+#| title: "Map changesets"
+
+hist_map_notes <- contributions_summary |>
+  ggplot(aes(x = map_notes)) +
+  geom_histogram(
+    # breaks = seq(0, max(contributions_summary), by = 2),
+    color = colour_primary_mark,
+    fill = colour_fill
+  ) +
+  geom_vline(
+    xintercept = mean(contributions_summary$map_notes), 
+    color = colour_secondary_mark, 
+    linetype = 2, 
+    lwd = 0.7
+  ) + 
+  annotate(
+    "text", 
+    x = mean(contributions_summary$map_notes), 
+    y = 3, 
+    label = paste("Mean:", round(mean(contributions_summary$map_notes), 2)),
+    color = colour_secondary_mark, 
+    fontface = "bold"
+  ) + 
+  # scale_x_continuous(breaks = seq(0, 20, by = 5)) +
+  labs(y = "# of users", x = "Notes") +
+  theme_user_stats
 
 ```
 
@@ -298,12 +326,10 @@ hist_comments <- contributions_summary |>
   # scale_x_continuous(breaks = seq(0, 20, by = 5)) +
   labs(
     subtitle = "Comments are discussions around a particular changeset",
-    x = "Comments authored by user",
-    y = "Number of users"
+    x = "Comments",
+    y = "# of users"
   ) +
   theme_user_stats
-
-ggplotly(hist_comments)
 
 ```
 
@@ -333,10 +359,8 @@ hist_diary <- contributions_summary |>
     fontface = "bold"
   ) + 
   # scale_x_continuous(breaks = seq(0, 20, by = 5)) +
-  labs(y = "Number of users", x = "Diary entries authored by user") +
+  labs(y = "# of users", x = "Diary entries") +
   theme_user_stats
-
-ggplotly(hist_diary)
 
 ```
 
@@ -366,15 +390,62 @@ hist_traces <- contributions_summary |>
     fontface = "bold"
   ) + 
   # scale_x_continuous(breaks = seq(0, 20, by = 5)) +
-  labs(y = "Number of users", x = "Traces uploaded by user") +
+  labs(y = "# of users", x = "Traces") +
   theme_user_stats
 
+```
+
+```{r}
+#| title: "Contributions distribution by users"
+#| subtitle: "This provides info about how homogeneous or heterogeneous this group is"
+#| layout-ncol: 2
+
+
+ggplotly(hist_account_age) 
+ggplotly(hist_map_changesets)
+ggplotly(hist_map_notes)
+ggplotly(hist_comments)
+ggplotly(hist_diary)
 ggplotly(hist_traces)
 
 ```
 
+```{r}
+#| title: "Facets"
 
-### Contributions distribution {.tabset}
+contributions_summary |> 
+  select(user, account_age, map_changesets, wiki_edits, comments, diary, map_notes, traces) |> 
+  pivot_longer(-user) |> 
+  mutate(name = as.factor(name),
+         name = fct_relevel(name, "account_age", "map_changesets", "wiki_edits", "comments", "diary", "map_notes", "traces")) |> 
+  ggplot(aes(x = value, fill = name)) +
+  geom_histogram(
+    # breaks = seq(0, max(contributions_summary), by = 2),
+    # color = colour_primary_mark,
+    # fill = colour_fill
+  ) +
+  geom_vline(
+    xintercept = mean(~value), 
+    # color = colour_secondary_mark, 
+    linetype = 2, 
+    lwd = 0.7
+  ) + 
+  facet_wrap(~name, ncol = 2, scales = "free_x")+ 
+  labs(y = "", x ="") +
+  # theme_minimal() +
+  theme(
+    axis.title.y=element_blank(),
+    axis.ticks.y = element_blank(),
+    axis.text.y = element_blank(),
+    panel.grid= element_blank(),
+    legend.position = "none"
+  )
+
+
+```
+
+
+### Contributions distribution
 
 ```{r}
 #| title: "Contributions per type"
@@ -383,17 +454,8 @@ contributions_type |>
   plot_ly(labels = ~name, values = ~n) |> 
   add_pie(hole = 0.6)
 
-
-
-
 ```
 
-
-```{r}
-#| title: "Contributions per hour"
-
-print("Pie chart showing total time spent in contributions per type.")
-```
 
 # Changesets {icon="fa-utensils"}
 
@@ -543,22 +605,6 @@ hist_changesets_size <- changesets_details |>
 
 ggplotly(hist_changesets_size)
 
-
-```
-
-```{r}
-#| title: "Changesets and size 2"
-p <- changesets |> 
-  count(changes_count, sort = TRUE) |> 
-  ggplot(aes(x = changes_count, y = n)) +
-  geom_point() +
-  scale_x_log10() +
-  scale_y_log10() + 
-  labs(x = "Number of features in changeset",
-       y = "Number of changesets") + 
-  theme_minimal()
-
-ggplotly(p)
 
 ```
 
