--- a/vignettes/articles/references.bib
+++ b/vignettes/articles/references.bib
@@ -1,21 +1,25 @@
-
-@book{dignazio2023,
-	title = {Data Feminism},
-	author = {{d'Ignazio}, Catherine and Klein, Lauren F},
-	year = {2023},
-	date = {2023},
-	publisher = {MIT PRESS},
-	note = {OCLC: 1354647893},
-	address = {S.l.},
-	langid = {eng}
+@book{dignazioDataFeminism2020,
+  title = {Data {{Feminism}}},
+  author = {{d'Ignazio}, Catherine and Klein, Lauren F},
+  year = {2020},
+  month = mar,
+  series = {Strong {{Ideas}}},
+  publisher = {MIT Press},
+  address = {Cambridge, MA, USA},
+  isbn = {978-0-262-54718-5},
+  langid = {english},
+  keywords = {datavis,feminism},
+  annotation = {OCLC: 1354647893},
+  file = {/Users/u2071219/Documents/SynologyDrive-Shared/Zotfiles/MIT PRESS/2023/d'Ignazio_Klein_2023_Data Feminism.pdf}
 }
 
-@inproceedings{dignazio2016,
-	title = {Workshop on Visualization for the Digital Humanities (VIS4DH)},
-	author = {{d'Ignazio}, Catherine and Klein, Lauren F},
-	year = {2016},
-	date = {2016},
-	publisher = {Workshop on Visualization for the Digital Humanities (VIS4DH), Baltimore. IEEE.},
-	note = {Accepted: 2020-09-09T14:17:30Z},
-	address = {Baltimore. IEEE}
+@inproceedings{dignazioFeministDataVisualization2016,
+  title = {Feminist Data Visualization},
+  booktitle = {Workshop on {{Visualization}} for the {{Digital Humanities}} ({{VIS4DH}})},
+  author = {{d'Ignazio}, Catherine and Klein, Lauren F},
+  year = {2016},
+  address = {Baltimore. IEEE},
+  keywords = {3-stars,data visualisation,datavis,dataviz,digital humanities,feminism},
+  annotation = {Accepted: 2020-09-09T14:17:30Z},
+  file = {/Users/u2071219/Documents/SynologyDrive-Shared/Zotfiles/undefined/2016/d’Ignazio_Klein_2016_Feminist data visualization.pdf}
 }
